2010-11-10 Dong H. Ahn <ahn1@llnl.gov>
	* test/src/Makefile.am:
	Added support for testdir to install test files 
	into a non-bin directory


2010-11-09 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/linux/sdbg_linux_launchmon.cxx:
	Added a fix for a scalability bug. When launchmon puts
	comma-separated hostnames in one line, srun's 
	--node-list option fails with 
	"srun: error: Line 1, of hostfile ...hostnamefn.31504 too long."
	For Moe Jette's suggestion, the newline character
	is used instead as the delimiter.

	At 1334 Sierra nodes (16008 processes): Cold Start 
	The inclusive LMON overhead of bootstrapping the ICCL layer: 8.673522 secs
	The exclusive LMON overhead of bootstrapping the ICCL layer: 0.050768 secs
	LMON_fe_launchAndSpawnDaemons perf: 18 (1289347047 - 1289347029) seconds 568745 (648176 - 79431) usec
	LMON_fe_getProctable perf: 0 (1289347047 - 1289347047) seconds 2813 (651002 - 648189) usec

	At 1334 Sierra nodes (16008 processes): Warm Start 
	The inclusive LMON overhead of bootstrapping the ICCL layer: 1.128388 secs
	The exclusive LMON overhead of bootstrapping the ICCL layer: 0.411942 secs
	LMON_fe_launchAndSpawnDaemons perf: 3 (1289347052 - 1289347048) seconds 774304 (468822 - 694518) usec
	LMON_fe_getProctable perf: 0 (1289347052 - 1289347052) seconds 2277 (471121 - 468844) usec


2010-11-08 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/sdbg_base_symtab_impl.hxx
	launchmon/src/sdbg_base_mach_impl.hxx
	launchmon/src/sdbg_base_symtab.hxx
	launchmon/src/linux/sdbg_linux_symtab.hxx
	launchmon/src/linux/main.cxx
	launchmon/src/linux/lmon_api/lmon_fe.cxx
	launchmon/src/linux/lmon_api/lmon_lmonp_msg.cxx
	launchmon/src/linux/lmon_api/lmon_be_comm.cxx
	launchmon/src/linux/lmon_api/lmon_be.cxx
	launchmon/src/linux/sdbg_linux_launchmon.cxx
	launchmon/src/linux/sdbg_linux_symtab_impl.hxx
	launchmon/src/sdbg_opt.cxx
	launchmon/src/sdbg_base_launchmon_impl.hxx
	test/src/be_kicker.cxx
	test/src/be_kicker_usrpayload_test.cxx: