@@ -1,3 +1,11 @@
+2011-09-12 Dong H. Ahn <ahn1@llnl.gov>
+	* launchmon/src/sdbg_rm_map.hxx
+	launchmon/src/sdbg_base_launchmon_impl.hxx
+	tools/alps/src/alps_fe_colocator.cxx:
+	Fix for the isse (ID: 3408210): alps_fe_colocat process
+	hanging around after STAT completes its session.
+
+
 2010-11-10 Dong H. Ahn <ahn1@llnl.gov>
 	* test/src/Makefile.am:
 	Added support for testdir to install test files 
